# EarthquakesParser

./: .env.template  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_SUMMARY.md  README.md  instagram_links.csv  main.py  pyproject.toml  test1-1.py
.claude/commands/: supabase-backup-manager.md  supabase-realtime-monitor.md  supabase-security-audit.md  supabase-type-generator.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  create-release-pr.yml  docs.yml  release.yml
config/: README.md  keywords.example.txt  keywords.txt
data/: README.md  links.csv  output.json
docs/: COMMIT_CONVENTION.md  CONTRIBUTING.md  CONTRIBUTING_GUIDE.md  GITHUB_PAGES_SETUP.md  PRE_COMMIT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RELEASE_POLICY.md  SEARCH_MANAGER.md  SECRETS_BASELINE.md  SETUP_COMPLETE.md  SUPABASE_ARCHITECTURE.md  SUPABASE_CHEATSHEET.md  SUPABASE_QUICKSTART.md  SUPABASE_STORAGE_API.md  SUPABASE_USAGE.md  _config.yml  index.md
earthquakes_parser/: __init__.py
earthquakes_parser/parser/: __init__.py  collect_data_train.py  collect_train_dataset.py  content_parser.py  data_extractor.py  models.py  parser_manager.py  schema_extractor.py  schema_manager.py
earthquakes_parser/search/: __init__.py  base_searcher.py  ddg_searcher.py  google_searcher.py  html_downloader.py  search_manager.py  search_result.py  searcher.py
earthquakes_parser/storage/: __init__.py  base.py  csv_storage.py  s3_storage.py  supabase_storage.py
earthquakes_parser/storage/supabase/: __init__.py  database.py  file_storage.py
examples/: supabase_example.py
experiments/: .gitignore
experiments/searcher_test/: README.md  test_searcher_manual.py
sandbox/: README.md  example_parser.py  example_search.py
sandbox/00_initial_tests/: README.md  requirements.txt
sandbox/01_project_structure/: CLEANUP_SUMMARY.md  FINAL_CLEANUP.md  FINAL_STRUCTURE.md  GITHUB_PAGES_SUMMARY.md  PRE_COMMIT_SETUP.md  README.md  STRUCTURE_OVERVIEW.md
scripts/: README.md  bump_version.py  test_new_architecture.py  test_search_manager.py  test_storage_bucket.py  test_supabase_connection.py  test_supabase_file_storage.py  test_supabase_simple.py  verify_setup.py
supabase/migrations/: 20250122_create_fake_detection_schema.sql
tests/: __init__.py  test_parser.py  test_searcher.py  test_storage.py  test_supabase_storage.py
veritatis/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
veritatis/api/: main.py
veritatis/scripts/: init_collections.py
veritatis/veritatis/: vector_stores.py
